target/D96Parser.py
# Generated from main/d96/parser/D96.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Break'", "'Continue'", "'If'", "'Elseif'", 
                     "'Else'", "'Foreach'", "'True'", "'False'", "'Array'", 
                     "'In'", "'Int'", "'Float'", "'Boolean'", "'String'", 
                     "'Return'", "'Null'", "'Class'", "'Var'", "'Val'", 
                     "'Self'", "'Constructor'", "'Destructor'", "'By'", 
                     "'New'", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", 
                     "'&&'", "'||'", "'=='", "'='", "'!='", "'<'", "'<='", 
                     "'>'", "'>='", "'==.'", "'+.'", "'::'", "'.'", "'('", 
                     "')'", "'{'", "'}'", "';'", "','", "'['", "']'", "':'", 
                     "'..'" ]

    symbolicNames = [ "<INVALID>", "BREAK", "CONTINUE", "IF", "ELSEIF", 
                      "ELSE", "FOREACH", "TRUE", "FALSE", "KARRAY", "IN", 
                      "K_INT", "K_FLOAT", "K_BOOLEAN", "K_STRING", "RETURN", 
                      "NULL", "CLASS", "VAR", "VAL", "SELF", "CONSTRUCTOR", 
                      "DESTRUCTOR", "BY", "NEW", "ADD_", "MINUS_", "MUL_", 
                      "DIV_", "MOD_", "EXCLAMATION_", "AND_", "OR_", "EQ_COMPARE", 
                      "EQ", "NOT_EQ_COMPARE", "SMALLER", "SM_OR_EQ", "GREATER", 
                      "GR_OR_EQ", "EQ_STRING", "ADD_STRING", "COLONCOLON", 
                      "DOT", "LB", "RB", "LP", "RP", "SEMI", "COMMA", "LEFTB", 
                      "RIGHTB", "COLON", "DOTDOT", "BOOLEAN", "STRING", 
                      "FLOAT", "INT2", "INT", "DOLLAR_ID", "ID", "WS", "CMT", 
                      "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_class_decl = 1
    RULE_class_type = 2
    RULE_class_block = 3
    RULE_class_stmt = 4
    RULE_attr_decl = 5
    RULE_method_decl = 6
    RULE_constructor = 7
    RULE_destructor = 8
    RULE_attr_decl_1 = 9
    RULE_attr_decl_2 = 10
    RULE_extend_1 = 11
    RULE_id_type = 12
    RULE_idList = 13
    RULE_nor_id_type = 14
    RULE_nor_idList = 15
    RULE_vari_decl_1 = 16
    RULE_vari_decl_2 = 17
    RULE_extend_2 = 18
    RULE_typeDeclaration = 19
    RULE_typeDeclaration2 = 20
    RULE_array_type = 21
    RULE_list_param = 22
    RULE_param_decl = 23
    RULE_stmt_block = 24
    RULE_stmt_block_ret = 25
    RULE_stmt = 26
    RULE_vari_decl = 27
    RULE_assign_stmt = 28
    RULE_if_stmt = 29
    RULE_condition_block = 30
    RULE_elseif_block = 31
    RULE_elseif_blocks = 32
    RULE_else_block = 33
    RULE_for_each_stmt = 34
    RULE_break_stmt = 35
    RULE_continue_stmt = 36
    RULE_return_stmt = 37
    RULE_method_inv_stmt = 38
    RULE_new_stmt = 39
    RULE_expr = 40
    RULE_expr1 = 41
    RULE_expr2 = 42
    RULE_expr3 = 43
    RULE_expr4 = 44
    RULE_expr5 = 45
    RULE_expr6 = 46
    RULE_expr7 = 47
    RULE_expr8 = 48
    RULE_expr9 = 49
    RULE_expr10 = 50
    RULE_primary = 51
    RULE_list_expr = 52
    RULE_index_op = 53
    RULE_member_access_attribute = 54
    RULE_member_access_method = 55
    RULE_literal = 56
    RULE_farray = 57
    RULE_expr_array = 58
    RULE_int_int2 = 59
    RULE_int_array = 60
    RULE_float_array = 61
    RULE_string_array = 62
    RULE_boolean_array = 63
    RULE_iarray = 64
    RULE_marray = 65

    ruleNames =  [ "program", "class_decl", "class_type", "class_block", 
                   "class_stmt", "attr_decl", "method_decl", "constructor", 
                   "destructor", "attr_decl_1", "attr_decl_2", "extend_1", 
                   "id_type", "idList", "nor_id_type", "nor_idList", "vari_decl_1", 
                   "vari_decl_2", "extend_2", "typeDeclaration", "typeDeclaration2", 
                   "array_type", "list_param", "param_decl", "stmt_block", 
                   "stmt_block_ret", "stmt", "vari_decl", "assign_stmt", 
                   "if_stmt", "condition_block", "elseif_block", "elseif_blocks", 
                   "else_block", "for_each_stmt", "break_stmt", "continue_stmt", 
                   "return_stmt", "method_inv_stmt", "new_stmt", "expr", 
                   "expr1", "expr2", "expr3", "expr4", "expr5", "expr6", 
                   "expr7", "expr8", "expr9", "expr10", "primary", "list_expr", 
                   "index_op", "member_access_attribute", "member_access_method", 
                   "literal", "farray", "expr_array", "int_int2", "int_array", 
                   "float_array", "string_array", "boolean_array", "iarray", 
                   "marray" ]

    EOF = Token.EOF
    BREAK=1
    CONTINUE=2
    IF=3
    ELSEIF=4
    ELSE=5
    FOREACH=6
    TRUE=7
    FALSE=8
    KARRAY=9
    IN=10
    K_INT=11
    K_FLOAT=12
    K_BOOLEAN=13
    K_STRING=14
    RETURN=15
    NULL=16
    CLASS=17
    VAR=18
    VAL=19
    SELF=20
    CONSTRUCTOR=21
    DESTRUCTOR=22
    BY=23
    NEW=24
    ADD_=25
    MINUS_=26
    MUL_=27
    DIV_=28
    MOD_=29
    EXCLAMATION_=30
    AND_=31
    OR_=32
    EQ_COMPARE=33
    EQ=34
    NOT_EQ_COMPARE=35
    SMALLER=36
    SM_OR_EQ=37
    GREATER=38
    GR_OR_EQ=39
    EQ_STRING=40
    ADD_STRING=41
    COLONCOLON=42
    DOT=43
    LB=44
    RB=45
    LP=46
    RP=47
    SEMI=48
    COMMA=49
    LEFTB=50
    RIGHTB=51
    COLON=52
    DOTDOT=53
    BOOLEAN=54
    STRING=55
    FLOAT=56
    INT2=57
    INT=58
    DOLLAR_ID=59
    ID=60
    WS=61
    CMT=62
    ERROR_CHAR=63
    UNCLOSE_STRING=64
    ILLEGAL_ESCAPE=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def class_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Class_declContext)
            else:
                return self.getTypedRuleContext(D96Parser.Class_declContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 132
                self.class_decl()
                self.state = 135 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.CLASS):
                    break

            self.state = 137
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_type(self):
            return self.getTypedRuleContext(D96Parser.Class_typeContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_class_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_decl" ):
                return visitor.visitClass_decl(self)
            else:
                return visitor.visitChildren(self)




    def class_decl(self):

        localctx = D96Parser.Class_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.class_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def class_block(self):
            return self.getTypedRuleContext(D96Parser.Class_blockContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_class_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_type" ):
                return visitor.visitClass_type(self)
            else:
                return visitor.visitChildren(self)




    def class_type(self):

        localctx = D96Parser.Class_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(D96Parser.CLASS)
            self.state = 142
            self.match(D96Parser.ID)
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.COLON:
                self.state = 143
                self.match(D96Parser.COLON)
                self.state = 144
                self.match(D96Parser.ID)


            self.state = 147
            self.class_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def class_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Class_stmtContext)
            else:
                return self.getTypedRuleContext(D96Parser.Class_stmtContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_class_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_block" ):
                return visitor.visitClass_block(self)
            else:
                return visitor.visitChildren(self)




    def class_block(self):

        localctx = D96Parser.Class_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_class_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(D96Parser.LP)
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.VAR) | (1 << D96Parser.VAL) | (1 << D96Parser.CONSTRUCTOR) | (1 << D96Parser.DESTRUCTOR) | (1 << D96Parser.DOLLAR_ID) | (1 << D96Parser.ID))) != 0):
                self.state = 150
                self.class_stmt()
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 156
            self.match(D96Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attr_decl(self):
            return self.getTypedRuleContext(D96Parser.Attr_declContext,0)


        def method_decl(self):
            return self.getTypedRuleContext(D96Parser.Method_declContext,0)


        def constructor(self):
            return self.getTypedRuleContext(D96Parser.ConstructorContext,0)


        def destructor(self):
            return self.getTypedRuleContext(D96Parser.DestructorContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_class_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_stmt" ):
                return visitor.visitClass_stmt(self)
            else:
                return visitor.visitChildren(self)




    def class_stmt(self):

        localctx = D96Parser.Class_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_class_stmt)
        try:
            self.state = 162
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAR, D96Parser.VAL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.attr_decl()
                pass
            elif token in [D96Parser.DOLLAR_ID, D96Parser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 159
                self.method_decl()
                pass
            elif token in [D96Parser.CONSTRUCTOR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 160
                self.constructor()
                pass
            elif token in [D96Parser.DESTRUCTOR]:
                self.enterOuterAlt(localctx, 4)
                self.state = 161
                self.destructor()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def attr_decl_1(self):
            return self.getTypedRuleContext(D96Parser.Attr_decl_1Context,0)


        def attr_decl_2(self):
            return self.getTypedRuleContext(D96Parser.Attr_decl_2Context,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attr_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttr_decl" ):
                return visitor.visitAttr_decl(self)
            else:
                return visitor.visitChildren(self)




    def attr_decl(self):

        localctx = D96Parser.Attr_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attr_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            _la = self._input.LA(1)
            if not(_la==D96Parser.VAR or _la==D96Parser.VAL):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 165
                self.attr_decl_1()
                pass

            elif la_ == 2:
                self.state = 166
                self.attr_decl_2()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def stmt_block(self):
            return self.getTypedRuleContext(D96Parser.Stmt_blockContext,0)


        def DOLLAR_ID(self):
            return self.getToken(D96Parser.DOLLAR_ID, 0)

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def list_param(self):
            return self.getTypedRuleContext(D96Parser.List_paramContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_method_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_decl" ):
                return visitor.visitMethod_decl(self)
            else:
                return visitor.visitChildren(self)




    def method_decl(self):

        localctx = D96Parser.Method_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_method_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            _la = self._input.LA(1)
            if not(_la==D96Parser.DOLLAR_ID or _la==D96Parser.ID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 170
            self.match(D96Parser.LB)
            self.state = 172
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.ID:
                self.state = 171
                self.list_param()


            self.state = 174
            self.match(D96Parser.RB)
            self.state = 175
            self.stmt_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstructorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONSTRUCTOR(self):
            return self.getToken(D96Parser.CONSTRUCTOR, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def stmt_block(self):
            return self.getTypedRuleContext(D96Parser.Stmt_blockContext,0)


        def list_param(self):
            return self.getTypedRuleContext(D96Parser.List_paramContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_constructor

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstructor" ):
                return visitor.visitConstructor(self)
            else:
                return visitor.visitChildren(self)




    def constructor(self):

        localctx = D96Parser.ConstructorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_constructor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.match(D96Parser.CONSTRUCTOR)
            self.state = 178
            self.match(D96Parser.LB)
            self.state = 180
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.ID:
                self.state = 179
                self.list_param()


            self.state = 182
            self.match(D96Parser.RB)
            self.state = 183
            self.stmt_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DestructorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DESTRUCTOR(self):
            return self.getToken(D96Parser.DESTRUCTOR, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def stmt_block(self):
            return self.getTypedRuleContext(D96Parser.Stmt_blockContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_destructor

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDestructor" ):
                return visitor.visitDestructor(self)
            else:
                return visitor.visitChildren(self)




    def destructor(self):

        localctx = D96Parser.DestructorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_destructor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self.match(D96Parser.DESTRUCTOR)
            self.state = 186
            self.match(D96Parser.LB)
            self.state = 187
            self.match(D96Parser.RB)
            self.state = 188
            self.stmt_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_decl_1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idList(self):
            return self.getTypedRuleContext(D96Parser.IdListContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def typeDeclaration(self):
            return self.getTypedRuleContext(D96Parser.TypeDeclarationContext,0)


        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_attr_decl_1

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttr_decl_1" ):
                return visitor.visitAttr_decl_1(self)
            else:
                return visitor.visitChildren(self)




    def attr_decl_1(self):

        localctx = D96Parser.Attr_decl_1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_attr_decl_1)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 190
            self.idList()
            self.state = 191
            self.match(D96Parser.COLON)
            self.state = 192
            self.typeDeclaration()
            self.state = 193
            self.match(D96Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_decl_2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_type(self):
            return self.getTypedRuleContext(D96Parser.Id_typeContext,0)


        def extend_1(self):
            return self.getTypedRuleContext(D96Parser.Extend_1Context,0)


        def expr(self):
            return self.getTypedRuleContext(D96Parser.ExprContext,0)


        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_attr_decl_2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttr_decl_2" ):
                return visitor.visitAttr_decl_2(self)
            else:
                return visitor.visitChildren(self)




    def attr_decl_2(self):
